# physical-AI-Humanoid-Robotic-book

./: .gitignore  .vercelignore  CHATBOT_SETUP.md  QWEN.md  RAILWAY_BACKEND_DEPLOY.md  README.md  VERCEL_DEPLOYMENT.md  vercel.json
.qwen/: QWEN.md
backend/: .env.example  API_DOCUMENTATION.md  DEPLOYMENT.md  README.md  alembic.ini  config.py  docker-compose.yml  initialize_chatbot.py  main.py  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  test_e2e.py
backend/api/: health_api.py  initialization_api.py  query_api.py  status_api.py
backend/database/: connection.py  content_repository.py
backend/migrations/: env.py
backend/models/: content.py
backend/my-physical-ai-book/: package-lock.json  package.json
backend/services/: content_service.py  embedding_service.py  gemini_embedding_service.py  response_service.py  retrieval_service.py  scraping_service.py  vector_service.py
backend/tests/: test_api.py
backend/utils/: debugging.py  exception_handlers.py  logging.py  rate_limit.py  security.py  token_utils.py
history/adr/: 001-session-management-strategy.md
specs/001-brand-success-research-paper/: data-model.md  plan.md  spec.md  tasks.md
specs/001-rag-chatbot-backend/: constitution.md  plan.md  research.md  spec.md  tasks.md
specs/002-textbook-platform/: spec.md  tasks.md
specs/checklists/: requirements.md
website/: .gitignore  docusaurus.config.js  package-lock.json  sidebars.js  vercel.json
website/blog/: 2026-01-03-ai-robotics-convergence.md  2026-01-04-humanoid-robotics-overview.md  2026-01-05-introduction-physical-ai.md  (+1 more)
(+74 files in other folders)
