[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "fastapi>=0.124.0",
    "httpx>=0.28.1",
    "openai>=2.9.0",
    "openai-agents>=0.6.2",
    "pillow>=12.0.0",
    "psutil>=7.1.3",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.16.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "tiktoken>=0.12.0",
    "uvicorn[standard]>=0.38.0",
]
